<resources>
    <string name="app_name">Re:Trip</string>

    <string name="apiKey">AIzaSyD9gTR55_KQYV0FkdZatU27KwFoTBNebxE</string>

    // Journeys strings
    <string name="my_journeys">My Journeys</string>
    <string name="new_journey">New Journey</string>
    <string name="create_journey">Add Journey</string>
    <string name="create_journey_button">Let\'s go!</string>
    <string name="where_question">Where are you going?</string>
    <string name="destination_example">e.g. Bucharest / Switzerland / Lake Zürich</string>
    <string name="cleared_journeys_message">All your Journeys have been deleted.</string>
    <string name="deleted_journey_message">Journey to %1$s was deleted.</string>
    <string name="journey">Journey</string>
    <string name="journey_details">Journey Details</string>
    <string name="empty_journey_list_hint">Start by adding a journey</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="data_backed_up">Your data has been backed up.</string>
    <string name="data_restored">Your data has been restore.</string>
    <string name="backup_to">BACKING UP TO</string>
    <string name="select_folder">Select folder</string>
    <string name="backup">Back up</string>
    <string name="restore">Restore</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_data_question">Are you sure you want to delete all data?</string>
    <string name="delete_journey_question">Are you sure you want to delete the journey to</string>
    <string name="delete_all_experiences_question">Are you sure you want to delete all experiences and associated data?</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">DELETE CONFIRMATION</string>
    <string name="credits_to">Credits to %1$s</string>
    <string name="journey_deleted">Journey to <b>%1$s</b> was deleted.</string>
    <string name="search_journeys">Search Journeys</string>
    <string name="delete_journey">Delete journey</string>

    // Experiences strings
    <string name="experience">Experience</string>
    <string name="create_experience">Add Experience</string>
    <string name="new_experience">New Experience</string>
    <string name="create_experience_button">Create</string>
    <string name="add_experience_name">Name your experience</string>
    <string name="where_to">Where to?</string>
    <string name="defaultNumberOfMemories">0 memories</string>
    <string name="new_memory">New memory</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="experienceDescription">Describe your experience</string>
    <string name="experienceName">Experience Name</string>
    <string name="location">Location:</string>
    <string name="cleared_experiences_message">All your Experiences from %1$s have been deleted.</string>
    <string name="experience_example">e.g. Brukenthal Museum / BärenPark</string>
    <string name="experience_details">Experience Details</string>
    <string name="empty_experience_list_hint">Add experiences and start exploring!</string>
    <string name="delete_all_memories_question">Are you sure you want to delete all memories and associated data?</string>
    <string name="delete_experience_question">Are you sure you want to delete the <b>%1$s</b> experience?</string>
    <string name="experience_deleted"><b>%1$s</b> experience was deleted.</string>
    <string name="describe_your_experience">Describe your experience (Optional)</string>
    <string name="delete_question_first_part">Are you sure you want to delete</string>

    // Memories strings
    <string name="create_memory">Add Memory</string>
    <string name="create_memory_button">Create</string>
    <string name="memoryName">Memory name</string>
    <string name="memoryDate">Memory date</string>
    <string name="describeMemory">Describe your memory (Optional)</string>
    <string name="clear_all_experiences">Delete all experiences</string>
    <string name="experience_updated_message">Your experience has been updated.</string>
    <string name="memory_date">Click here to choose a date</string>
    <string name="delete_all_memories">Delete all memories</string>
    <string name="cleared_memories_message">All your Memories  from %1$s have been deleted.</string>
    <string name="cleared_memory_photos_message">All your photos from <i>%1$s</i> have been deleted.</string>
    <string name="memory_details">Memory Details</string>
    <string name="delete_all_memory_photos">Delete all photos</string>
    <string name="description">Description</string>
    <string name="how_to_restore_data">HOW TO RESTORE DATA</string>
    <string name="restoring_data">RESTORING DATA</string>
    <string name="restore_warning">Restoring the backup file will overwrite your application data.</string>
    <string name="local_storage">Local Storage</string>
    <string name="other">Other</string>
    <string name="ok">OK</string>
    <string name="restore_ack">GOT IT</string>
    <string name="delete_all_photos_question">Are you sure you want to delete all photos?</string>
    <string name="change_cover_photo">Change cover photo</string>
    <string name="delete_experience">Delete experience</string>
    <string name="delete_photo_question">Are you sure you want to delete this photo?</string>
    <string name="memory_deleted"><b>%1$s</b> memory was deleted.</string>

    // transaction names
    <string name="transition_journey_image">journey image %d</string>
    <string name="transition_journey_destination_name">journey destination name %d</string>
    <string name="transition_journey_destination_address">journey destination address %d</string>
    <string name="transition_journey_location_marker">journey location marker %d</string>
    <string name="transition_experience_image">experience image %d</string>
    <string name="transition_experience_name">experience name %d</string>
    <string name="transition_experience_place_name">experience place name %d</string>
    <string name="transition_experience_place_address">experience place address %d</string>
    <string name="transition_experience_location_marker">experience location marker %d</string>
    <string name="transition_experience_description">experience description %d</string>
    <string name="transition_memory_image">memory image %d</string>
    <string name="transition_memory_name">memory name %d</string>
    <string name="transition_memory_description">memory description %d</string>
    <string name="transition_memory_date">memory date %d</string>
    <string name="transition_memory_calendar_icon">memory calendar icon %d</string>
    <string name="restoring_data_hint">To restore your data, open the TravelDiaryBackup.bdia file on this device.</string>
    <string name="backing_up_data">BACKING UP DATA</string>
    <string name="backup_guideline">Send this file to yourself through one of the available applications.</string>
    <string name="backup_with_file_name">A file named \"TravelDiaryBackup.bdia\" will be created.</string>
    <string name="add_a_caption_here">Add a caption here…</string>
    <string name="caption">Type a caption up to 140 characters</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="settings">Settings</string>
    <string name="backup_reminder">Backup Reminder</string>
    <string name="turn_on_or_off">Turn on or off</string>
    <string name="reminder_frequency">Reminder frequency</string>
    <string name="back_up_data">Back Up Data</string>
    <string name="back_up_data_info">Your data will be archived and you will have the option to send it to yourself. This process might take a while, depending on the size of your data.</string>
    <string name="restore_data">Restore Data</string>
    <string name="restore_data_info">To restore your data, download the TravelDiaryBackup.bdia backup file on this device, then open it with this app.\n\nRestoring data will overwrite all your current data.</string>
    <string name="delete_data">Delete Data</string>
    <string name="delete_data_info">This will delete all your current data.</string>
    <string name="backup_notification_channel_id">backup_channel</string>
    <string name="notification_title">Backup reminder</string>
    <string name="backup_notification_body">You should back up your data!</string>
    <string name="backup_notification_channel_name">Backup</string>
    <string name="delete_memory">Delete memory</string>
    <string name="describe_your_memory">Describe your memory</string>
    <string name="cancel_upper_case">CANCEL</string>
    <string name="journeys_empty_list_hint">You haven\'t set any journeys yet.\nStart here!</string>
    <string name="journeys">Journeys</string>
    <string name="experiences">Experiences</string>
    <string name="add_upper_case">ADD</string>

</resources>
